@@ -3,7 +3,7 @@ AC_DEFUN([TID_CHECK_DEBUG],
     AC_MSG_CHECKING([wheter debug is enabled])
 
     AC_ARG_ENABLE(debug, 
-                  [ --enable-debug=[yes/no] turn on debugging ],
+                  [  --enable-debug=[yes/no]   Turn on debugging ],
                   [
                     dnl Action if enabled 
                     CFLAGS="-g -O2"
